cmake_minimum_required(VERSION 3.13)
project(ConcurrentSkipList)
set(CMAKE_CXX_STANDARD 17)
find_package(Threads REQUIRED)
add_executable(ConcurrentSkipList main.cpp concurrent_lockfree_skiplist.h atomic_markable_reference.h hazard_domain.h)
target_link_libraries(${CMAKE_PROJECT_NAME} Threads::Threads)